--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <maven-compiler.version>3.11.0</maven-compiler.version>
         <maven-surefire.version>3.1.2</maven-surefire.version>
         <gmavenplus.version>3.0.0</gmavenplus.version>
+        <wire-mock.version>3.0.0-beta-10</wire-mock.version>
     </properties>
 
     <dependencyManagement>
@@ -48,6 +49,7 @@
             <scope>runtime</scope>
             <version>${h2.version}</version>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -63,6 +65,12 @@
             <groupId>org.spockframework</groupId>
             <artifactId>spock-spring</artifactId>
             <version>${spock.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock</artifactId>
+            <version>${wire-mock.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
