--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,22 @@
 server:
   port: 8090
 
+spring:
+  jpa:
+    show-sql: true
+    database-platform: org.hibernate.dialect.H2Dialect
+  datasource:
+    url: jdbc:h2:file:./data/users
+    driver-class-name: org.h2.Driver
+    username: users
+    password: password
+  h2:
+    console:
+      path: /h2-console
+      enabled: true
+  sql:
+    init:
+      mode: always
+
 providers:
   user.url: https://api.github.com/users
