--- a/src/test/resources/application-integration.yml
+++ b/src/test/resources/application-integration.yml
@@ -2,3 +2,7 @@ wiremock.port: 50000
 
 providers:
   user.url: http://0.0.0.0:${wiremock.port}/users
+
+spring:
+  datasource:
+    url: jdbc:h2:mem:users
