--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
       enabled: true
   sql:
     init:
-      mode: always
+      mode: embedded
 
 providers:
   user.url: https://api.github.com/users
